--- a/src/index.css
+++ b/src/index.css
@@ -162,9 +162,9 @@
 }
 
 .navbar {
- 
-margin: 0;
-padding: 0;
+
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -174,6 +174,7 @@ padding: 0;
     transition: all .3s;
     background-color: transparent;
 }
+
 .container-fluid-fondo {
     background-color: #133222;
     transition: all .3s;
@@ -199,7 +200,7 @@ padding: 0;
 
 }
 
-.button-header{
+.button-header {
     background-color: transparent;
     border: 0;
 }
@@ -279,7 +280,7 @@ padding: 0;
 
 .titulo-slider {
     color: white;
-    font-size: 9cqmax;
+    font-size: 8cqmax;
     font-family: "1";
     font-weight: bold;
     animation-name: fadeInLeft;
@@ -318,6 +319,7 @@ padding: 0;
     font-family: "1";
     font-weight: bolder;
     max-width: 800px;
+
 }
 
 .detalles-texto p {
@@ -873,7 +875,7 @@ padding: 0;
 
 .texto-vivir-ds-principal {
     font-family: "1";
-   font-size: medium;
+    font-size: medium;
     text-align: center;
     padding: 0px 20px;
 }
@@ -905,14 +907,14 @@ padding: 0;
     font-family: "1";
     border-bottom: solid 2px #ef8937;
     font-size: medium;
-   
+
 
 }
 
 .info-ds {
     font-family: "1";
     font-size: small;
-    background-color:#35604a;
+    background-color: #35604a;
     padding: 10px;
     border-radius: 10px;
 }
@@ -995,9 +997,7 @@ padding: 0;
     width: 100%;
     height: 100%;
     max-width: 1200px;
-    max-height: 600px;
-
-
+    max-height: 700px;
 }
 
 
@@ -1008,7 +1008,7 @@ padding: 0;
     width: 100%;
     height: 100%;
     max-width: 1200px;
-    max-height: 600px;
+    max-height: 700px;
     top: 0;
     bottom: 0;
     right: 0;
@@ -1048,6 +1048,47 @@ padding: 0;
     animation-name: fadeInUp;
     animation-duration: 1.5s;
     animation-iteration-count: 1;
+}
+
+#boton-slider-1-modelos {
+    justify-content: center;
+    z-index: 0;
+    margin-right: 1px;
+    border-left: #ffffff7a 1px solid;
+    width: 7vw;
+    min-width: 40px;
+    font-size: 1.5cqmin;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+#boton-slider-2-modelos {
+    justify-content: center;
+    z-index: 0;
+    margin-right: 1px;
+    border-left: #ffffff7a 1px solid;
+    width: 7vw;
+    min-width: 40px;
+    font-size: 1.5cqmin;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.boton-slider-modelo {
+    margin-right: 10px;
+    padding: 10px 0px;
+    border-bottom: solid 1px #ef8937;
+    font-family: "1";
+    font-weight: 500;
+}
+
+.girar-modelo {
+    transform: rotateZ(270deg);
+    letter-spacing: 5px;
+    font-weight: bold;
+
 }
 
 /* DETALLE BARRIO */
@@ -1405,13 +1446,13 @@ padding: 0;
     align-items: center;
 }
 
-.contenedor-data-casa-mob{
+.contenedor-data-casa-mob {
     background-color: #133222;
     padding: 40px 0px;
 }
 
-.titulo-encabezado-casa-mob{
-       text-align: center;
+.titulo-encabezado-casa-mob {
+    text-align: center;
     color: white;
     width: fit-content;
     margin: auto;
@@ -1424,25 +1465,25 @@ padding: 0;
     font-size: large;
 }
 
-.contenedor-caracteristicas-data-mob{
+.contenedor-caracteristicas-data-mob {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.contenedor-descripcion-casa-mob{
+.contenedor-descripcion-casa-mob {
     padding: 40px 20px;
     text-align: center;
 }
 
-.contenedor-descripcion-casa-mob p{
+.contenedor-descripcion-casa-mob p {
     color: white;
     font-family: "1";
     font-weight: 400;
 }
 
-.lista-caracteristicas-modelo-mob{
-     list-style: none;
+.lista-caracteristicas-modelo-mob {
+    list-style: none;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -1686,13 +1727,13 @@ padding: 0;
 
 .encabezado-fundacion {
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     overflow: hidden;
 }
 
 .fondo-encabezado-fundacion {
     width: 100vw;
-    height: 100vh;
+    height: 95vh;
     object-fit: cover;
 }
 
@@ -1896,9 +1937,9 @@ padding: 0;
         justify-content: space-evenly;
     }
 
-   
 
-   
+
+
 }
 
 @media (max-width:1200px) {
@@ -1953,8 +1994,11 @@ padding: 0;
     .lista-caracteristicas {
         list-style: none;
         display: flex;
-        justify-content: space-around;
-        margin: 20px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0;
+        padding: 0px 10px;
+
     }
 
     .item-caracteristicas {
@@ -1963,6 +2007,8 @@ padding: 0;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 33%;
+        font-size: small;
 
 
     }
@@ -1975,7 +2021,20 @@ padding: 0;
 
 @media (max-width:600px) {
 
-    .sub{
+    .img-caroucel {
+        height: 95vh;
+        animation-name: scale;
+        animation-duration: 15s;
+        object-fit: cover;
+
+    }
+
+    .detalles-texto p{
+        font-size: x-small;
+    }
+
+
+    .sub {
         font-size: medium;
     }
 
@@ -2139,8 +2198,24 @@ padding: 0;
     }
 
     .texto-vivir-ds-principal {
-   font-size: small;
-}
+        font-size: small;
+    }
+
+    .icono-modelo {
+        width: 30px;
+    }
+
+    .texto-icono {
+        margin-top: 10px;
+        font-family: "1";
+        font-weight: 600;
+        font-size: small;
+    }
+
+    .fondo-modelo {
+        height: 80vh;
+        object-fit: cover;
+    }
 
 }
 
